service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
