ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.techlearn.website
      http:
        paths:
        - path: /login
          backend:
            serviceName: my-service
            servicePort: 80
        - path: /cart
          backend:
            serviceName: my-service1
            servicePort: 8080
